# doc-train

./: .gitignore  inference.py  train.py
dataset/download/: README.md  arXiv_src_manifest.xml  copy-data.sh  download.py  start.sh
dataset/latex2image/: check_dataset.py  go.mod  load_dataset.py  main.go  pyproject.toml  upload_dataset.py
dataset/latex2image/src/: common.go  latex_parser.go  structure.go
dataset/latex2imagepy/: latex2image.py  pyproject.toml
layout/layoutlmv3/: README.md  inference.py  train.py
layout/layoutlmv3/mini-train/: main.py
mini-train/: model.py
ocr/donut-transformer/: evaluation.py  ft_donut_on_cord.py  ft_donut_on_table_latex.py  inference.py  metrics.py  pyproject.toml
