[tool.poetry]
name = "donut-transformer"
version = "0.1.0"
description = ""
authors = ["遥奕 <jibing.yjb@alibaba-inc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.42.3"
datasets = "^2.20.0"
torch = "^2.3.1"
pillow = "^10.4.0"
sentencepiece = "^0.2.0"
protobuf = "^5.27.2"
pytorch-lightning = "^2.3.3"
wandb = "^0.17.4"
donut-python = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
